
 - small test fix on test shell command
 - pull request merged : add Travis CI configuration file from zaneli authored on 29 Apr
 - scala 2.11.2
 - commons-compress 1.8.1
 - ShellOperations : lastModified darwin implementation added + test case
 - ShellOperations : disableHistory method added + test case
 - ShellOperationsTest class added.
 - small tests cleanup and improvements

------------------------------------------------------------------
0.9.13 (2014-05-31)

 - scala 2.11 support added
 - scala-logging-slf4j 2.1.2
 - scala-io 0.4.3
 - scalatest 2.1.5
 - jsch 0.1.51
 - and various impact changes

------------------------------------------------------------------
0.9.12 (2014-01-20)

 - sbt-eclipse 2.4.0
 - sbt-assembly 0.10.2
 - scalatest 2.0
 - scala 2.10.3
 - commons-compress 1.7

------------------------------------------------------------------
0.9.11 (2013-09-24)

 - receiveNcompress was not using localbasename parameter with already compressed remote files.
 - sbt-eclipse 2.3.0
 - fix from "Shashank Jain" that extends the cipher list.
   none,aes128-cbc,aes192-cbc,aes256-cbc,3des-cbc,blowfish-cbc,aes128-ctr,aes192-ctr,aes256-ctr
 - ciphers parameter added to SSHOptions in order to allow custom ciphers list
   
------------------------------------------------------------------
0.9.10 (2013-07-03)

 - DONE : add su support / with password prompt recognition...
    SSHShell.become method added, allow to become someoneelse.
    typical usage : from an ordinary user become the root user
 - SomeHelp class added in tests, in order to share common stuff.
 - various test classes enhancements
 - SSHShell timeout on current command (send ^C to break current processing and give back the prompt)
 - exit code accessible through a new method named executeWithStatus (thanks Alex Biehl for the suggestion)
 - SSHAPI.scala file split finished, SSHAPI.scala file deleted
 - imports cleaned up, source file copyright & license header added