@@ -95,6 +95,7 @@ TODO LIST :
  - ShellOperations : disableHistory method added + test case
  - ShellOperationsTest class added.
  - small tests cleanup and improvements
+ - shell history can now be processed
 
 ------------------------------------------------------------------
 0.9.13 (2014-05-31)
